package com.cesar.school.fds2.raycharge.recarga.domain.agendamento;

public enum Avaliacoes {
    UM,
    DOIS,
    TRES,
    QUATRO,
    CINCO
}