package com.cesar.school.fds2.raycharge.recarga.domain.agendamento;

public enum StatusAgendamento {
    ATIVO,
    CANCELADO,
    CONCLUIDO
}